@@ -4,10 +4,15 @@ module ActiveMerchant #:nodoc:
       class Notification
         attr_accessor :params
         attr_accessor :raw
-        
-        # set this to an array in the subclass, to specify which IPs are allowed to send requests
+
+        # set this to an array in the subclass, to specify which IPs are allowed
+        # to send requests
         class_attribute :production_ips
 
+        # * *Args*    :
+        #   - +doc+ ->     raw post string
+        #   - +options+ -> custom options which individual implementations can
+        #                  utilize
         def initialize(post, options = {})
           @options = options
           empty!
@@ -27,19 +32,19 @@ module ActiveMerchant #:nodoc:
           (gross.to_f * 100.0).round
         end
 
-        # This combines the gross and currency and returns a proper Money object. 
+        # This combines the gross and currency and returns a proper Money object.
         # this requires the money library located at http://dist.leetsoft.com/api/money
         def amount
           return Money.new(gross_cents, currency) rescue ArgumentError
           return Money.new(gross_cents) # maybe you have an own money object which doesn't take a currency?
         end
 
-        # reset the notification. 
+        # reset the notification.
         def empty!
           @params  = Hash.new
-          @raw     = ""      
+          @raw     = ""
         end
-        
+
         # Check if the request comes from an official IP
         def valid_sender?(ip)
           return true if ActiveMerchant::Billing::Base.integration_mode == :test || production_ips.blank?
@@ -49,13 +54,13 @@ module ActiveMerchant #:nodoc:
         def test?
           false
         end
-        
+
         private
 
         # Take the posted data and move the relevant data into a hash
         def parse(post)
           @raw = post.to_s
-          for line in @raw.split('&')    
+          for line in @raw.split('&')
             key, value = *line.scan( %r{^([A-Za-z0-9_.]+)\=(.*)$} ).flatten
             params[key] = CGI.unescape(value)
           end
